<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/pref_tracking"
        android:key="pref_key_tracking_settings">
        <EditTextPreference
            android:key="pref_key_tracking_distance"
            android:summary="@string/pref_summary_tracking_distance"
            android:title="@string/pref_title_tracking_distance"
            android:inputType="number"
            android:defaultValue="30"
            />
        <EditTextPreference
            android:key="pref_key_min_time_in_area"
            android:summary="@string/pref_summary_min_time_in_area"
            android:title="@string/pref_title_tracking_min_time_in_area"
            android:inputType="number"
            android:defaultValue="300"
            />
        <EditTextPreference
            android:key="pref_key_tracking_interval"
            android:summary="@string/pref_summary_tracking_interval"
            android:title="@string/pref_title_tracking_interval"
            android:inputType="number"
            android:defaultValue="60"
            />
        <EditTextPreference
            android:key="pref_key_max_favorites"
            android:summary="@string/pref_summary_max_favorites"
            android:title="@string/pref_title_max_favorites"
            android:inputType="number"
            android:defaultValue="100"
            />
        <EditTextPreference
            android:key="pref_key_favorite_update"
            android:summary="@string/pref_summary_favorite_update"
            android:title="@string/pref_title_favorites_update"
            android:inputType="number"
            android:defaultValue="30"
            />
        <EditTextPreference
            android:key="pref_key_max_hits_outside_area"
            android:summary="@string/pref_summary_max_hits_outside_area"
            android:title="@string/pref_title_max_hits_outside_area"
            android:inputType="number"
            android:defaultValue="3"
            />
        <EditTextPreference
            android:key="pref_key_min_hits_inside_area"
            android:summary="@string/pref_summary_min_hits_inside_area"
            android:title="@string/pref_title_min_hits_inside_area"
            android:inputType="number"
            android:defaultValue="2"
            />
        <CheckBoxPreference
            android:key="pref_key_show_location_data"
            android:summary="@string/pref_summary_show_location_data"
            android:title="@string/pref_title_show_location_data"
            android:defaultValue="false"
            />
        <EditTextPreference
            android:key="pref_key_location_accuracy"
            android:summary="@string/pref_summary_location_accuracy"
            android:title="@string/pref_title_location_accuracy"
            android:inputType="numberDecimal"
            android:defaultValue="200.0"
            />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/about_app"
        android:key="pref_key_about_app">
        <EditTextPreference
            android:key="pref_key_app_version"
            android:summary="Version 1.8.0 alfa, 2017-07-22"
            android:title="@string/app_version"
            android:selectable="true"
            android:inputType="text"
            />
    </PreferenceCategory>

</PreferenceScreen>