<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/action_help"
        android:title="@string/action_help"
        android:orderInCategory="1"
        android:icon="@drawable/ic_action_help"
        android:showAsAction="always" />
    <item
        android:id="@+id/action_share"
        android:title="@string/action_share"
        android:orderInCategory="2"
        android:icon="@drawable/ic_action_share"
        android:showAsAction="always" />
    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="3"
        android:icon="@drawable/ic_action_settings"
        android:showAsAction="always" />
</menu>
