<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".FilterActivity">

    <!-- D a t e   s e l e c t o r -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/border"
        android:layout_marginBottom="@dimen/button_bottom_margin">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageButton
                android:layout_width="@dimen/button_size"
                android:layout_height="@dimen/button_size"
                android:layout_gravity="left"
                android:layout_marginLeft="@dimen/button_left_margin"
                android:layout_marginRight="@dimen/button_right_margin"
                android:layout_marginTop="@dimen/icon_margin"
                android:layout_marginBottom="@dimen/icon_margin"
                android:background="@drawable/ic_action_calendar_day"
                android:onClick="onClickCalendar"/>

            <TextView
                android:id="@+id/selected_dates"
                android:text="@string/allDates"
                android:textAppearance="?android:attr/textAppearance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClickCalendar"
                android:layout_gravity="left"/>


        </LinearLayout>

        <!-- T o d a y  o n l y -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ToggleButton
                android:layout_width="@dimen/button_size"
                android:layout_height="@dimen/button_size"
                android:layout_gravity="left"
                android:layout_marginLeft="@dimen/button_left_margin"
                android:layout_marginRight="@dimen/button_right_margin"
                android:layout_marginTop="@dimen/icon_margin"
                android:layout_marginBottom="@dimen/icon_margin"
                android:id="@+id/toogle_today_only"
                android:background="@android:color/transparent"
                android:button="@drawable/category_toggle"
                android:onClick="onToggleTodayOnly"
                android:textOn=""
                android:textOff=""
                />

            <TextView
                android:text="@string/todayonly"
                android:textAppearance="?android:attr/textAppearance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onToggleTodayOnly"
                android:layout_gravity="left"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageButton
                android:layout_width="@dimen/button_size"
                android:layout_height="@dimen/button_size"
                android:layout_gravity="left"
                android:layout_marginLeft="@dimen/button_left_margin"
                android:layout_marginRight="@dimen/button_right_margin"
                android:layout_marginTop="@dimen/icon_margin"
                android:layout_marginBottom="@dimen/icon_margin"
                android:background="@drawable/ic_action_trash"
                android:onClick="onClickClearCalendar"/>
            <TextView
                android:textAppearance="?android:attr/textAppearance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClickClearCalendar"
                android:layout_gravity="left"
                android:text="@string/delete_date_filter"/>
        </LinearLayout>
    </LinearLayout>

    <!-- S e l e c t   C a t e g o r y  -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/button_bottom_margin">
        <RadioGroup
            android:id="@+id/category_selector"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <RadioButton
                android:id="@+id/allCategories"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/allCategories"
                android:onClick="onFilterCategoryClicked"/>
            <RadioButton
                android:id="@+id/other"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/other"
                android:onClick="onFilterCategoryClicked"/>
            <RadioButton
                android:id="@+id/store"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/store"
                android:onClick="onFilterCategoryClicked"/>
            <RadioButton
                android:id="@+id/restaurants"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/restaurant"
                android:onClick="onFilterCategoryClicked"/>
            <RadioButton
                android:id="@+id/cafe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/coffee"
                android:onClick="onFilterCategoryClicked"/>
            <RadioButton
                android:id="@+id/nature_spot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nature_spot"
                android:onClick="onFilterCategoryClicked"/>
            <RadioButton
                android:id="@+id/home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home"
                android:onClick="onFilterCategoryClicked"/>
            <RadioButton
                android:id="@+id/friend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/friend"
                android:onClick="onFilterCategoryClicked"/>
            <RadioButton
                android:id="@+id/attraction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/attraction"
                android:onClick="onFilterCategoryClicked"/>
            <RadioButton
                android:id="@+id/culture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/culture"
                android:onClick="onFilterCategoryClicked"/>

        </RadioGroup>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:orientation="horizontal">
        <TextView
            android:text="@string/filter_search"
            android:textAppearance="?android:attr/textAppearance"
            android:layout_marginLeft="@dimen/button_top_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"/>
        <EditText
            android:id="@+id/filter_search"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/holo_blue_bright"
            android:textAppearance="?android:attr/textAppearance"
            android:hint="@string/search_hint"
            android:singleLine="true"
            android:imeOptions="actionDone" />
    </LinearLayout>
</LinearLayout>
