<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:http="http://schemas.android.com/apk/res-auto"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:columnCount="1"
    tools:context=".HandleFavoriteActivity">
    <LinearLayout
        android:layout_row="0"
        android:layout_column="0"
        android:orientation="horizontal"
        android:gravity="fill_horizontal">
        <ImageButton
            android:id="@+id/favorite_category"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:layout_marginLeft="@dimen/button_left_margin"
            android:layout_marginRight="@dimen/button_right_margin_large"
            android:layout_marginTop="@dimen/button_top_margin"
            android:layout_marginBottom="@dimen/button_bottom_margin"
            android:layout_gravity="left"
            android:background="@android:color/transparent"
            android:onClick="onClickChangeCategory"/>
        <ImageButton
            android:id="@+id/favorite_delete"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:layout_marginLeft="@dimen/button_left_margin"
            android:layout_marginRight="@dimen/button_right_margin_large"
            android:layout_marginTop="@dimen/button_top_margin"
            android:layout_marginBottom="@dimen/button_bottom_margin"
            android:layout_gravity="right"
            android:background="@drawable/ic_action_trash"
            android:onClick="onClickDeleteFavorite"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/favorite_summary"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:background="@drawable/border"
        android:layout_marginBottom="@dimen/button_bottom_margin">
        <LinearLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:descendantFocusability="beforeDescendants"
            android:focusableInTouchMode="true"
            android:gravity="fill_horizontal">
            <EditText
                android:id="@+id/favorite_description"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/holo_blue_bright"
                android:textAppearance="?android:attr/textAppearance"
                android:hint="@string/description_hint"
                android:singleLine="true"
                android:imeOptions="actionDone" />
        </LinearLayout>
        <LinearLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:layout_marginLeft="@dimen/button_bottom_margin"          >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/address"/>
            <TextView
                android:id="@+id/favorite_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="italic"
                android:textAppearance="?android:attr/textAppearanceSmall"/>
        </LinearLayout>
        <LinearLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:layout_marginLeft="@dimen/button_bottom_margin" >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/position"/>
            <TextView
                android:id="@+id/favorite_latitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="italic"
                android:textAppearance="?android:attr/textAppearanceSmall"
                />
            <TextView
                android:id="@+id/favorite_longitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="italic"
                android:textAppearance="?android:attr/textAppearanceSmall"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:layout_marginLeft="@dimen/button_bottom_margin">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/datetime"/>
            <TextView
                android:id="@+id/favorite_datetime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="italic"
                android:textAppearance="?android:attr/textAppearanceSmall"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/i"/>
            <TextView
                android:id="@+id/favorite_timespent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="italic"
                android:textAppearance="?android:attr/textAppearanceSmall"
                />
        </LinearLayout>
    </LinearLayout>
    <TextView
        android:layout_row="1"
        android:layout_column="0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="#000000"
        android:layout_marginTop="-10dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textStyle="italic"
        android:text="@string/details"
        android:textColor="#ffffff"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_marginBottom="@dimen/button_bottom_margin"
        android:background="@drawable/border">
        <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/button_bottom_margin"
            android:id="@+id/mapframe">
            <fragment xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/handle_favorite_map"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:name="com.google.android.gms.maps.MapFragment"/>
        </FrameLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="155dp"
        android:layout_row="3"
        android:layout_column="0"
        android:layout_marginTop="@dimen/button_bottom_margin"
        android:background="@drawable/border">
        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:columnCount="1"
            >
            <ImageButton
                android:layout_row="0"
                android:layout_width="@dimen/button_size"
                android:layout_height="@dimen/button_size"
                android:layout_marginLeft="@dimen/button_left_margin"
                android:layout_marginRight="@dimen/button_right_margin_large"
                android:layout_marginTop="@dimen/button_top_margin"
                android:layout_marginBottom="@dimen/button_bottom_margin"
                android:layout_gravity="left"
                android:background="@drawable/ic_action_search"
                android:onClick="onClickSearchFavorites"/>
            <EditText
                android:layout_row="1"
                android:id="@+id/radius"
                android:textStyle="italic"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/button_size"

                android:layout_gravity="center_vertical"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:imeOptions="actionDone"
                android:text="50"
                android:inputType="number" />
        </GridLayout>
        <ListView
            android:id="@+id/list_places"
            android:layout_column="0"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:layout_margin="@dimen/button_bottom_margin"
            android:fastScrollEnabled="true"
            android:transcriptMode="alwaysScroll"
            android:paddingBottom="5dp">
        </ListView>
    </LinearLayout>
    <TextView
        android:layout_row="3"
        android:layout_column="0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="#000000"
        android:layout_marginTop="-4dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textStyle="italic"
        android:text="@string/placelist"
        android:textColor="#ffffff"/>

</GridLayout>
